2015-03-30  Craig Howland  <howland@LGSInnovations.com>

	* libc/stdlib/setenv_r.c (_setenv_r): Remove tzset() call for TZ
	definition.
	* libc/time/lcltime_r.c (localtime_r): Add tzset() call
	* libc/time/mktime.c (mktime):  Ditto.
	* libc/time/strftime.c (strftime, wcsftime): Ditto.

2015-03-30  Yaakov Selkowitz  <yselkowi@redhat.com>

	* libc/time/strftime.c (strftime) <%Z>: Initialize tznam to NULL.
	Use _tzname as fallback if TM_ZONE is NULL.

2015-03-30  Yaakov Selkowitz  <yselkowi@redhat.com>

	* libc/include/libgen.h (_BASENAME_DEFINED): Define.
	* libc/include/string.h (basename): Declare.
	* libc/string/Makefile.am (ELIX_4_SOURCES): Add gnu_basename.c.
	* libc/string/Makefile.in: Regenerate.
	* libc/string/gnu_basename.c: New file.

2015-03-23  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/tree.h: New file.

2013-03-23  Joel Sherrill <joel.sherrill@oarcorp.com>

	* newlib.hin: Remove _UINTPTR_EQ_ULONG and _UINTPTR_EQ_ULONGLONG.

2015-03-23  Joel Sherrill <joel.sherrill@oarcorp.com

	* configure.in: Delete logic to determine _UINTPTR_EQ_ULONGLONG
	and _UINTPTR_EQ_ULONG at configuration time.
	*libc/include/sys/config.h: Add logic to determine
	_UINTPTR_EQ_ULONGLONG and _UINTPTR_EQ_ULONG at compilation time.
	* libc/include/inttypes.h: Add include of <sys/config.h>.
	* configure: Regenerated.

2015-03-19  Steve Ellcey  <sellcey@imgtec.com>

	* libc/include/sys/time.h: Replace uint32_t and uint64_t
	with __uint32_t and __uint64_t.

2015-03-13  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* libc/libc.texinfo: Fix directory entry.
	* libm/libm.texinfo: Ditto.

2015-03-13  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/time.h: Drop including cygwin/sys_time.h on Cygwin.

2015-03-13  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/machine/_types.h (__suseconds_t): Define.
	* libc/include/sys/_timeval.h: Import from FreeBSD and add
	MinGW-w64 compatibility.