@@ -1,3 +1,7 @@
+2015-03-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* localtime.cc (tzset_unlocked): Export as _tzset_unlocked.
+
 2015-03-30  Yaakov Selkowitz  <yselkowi@redhat.com>
 
 	* common.din (__gnu_basename): Export.
